--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,6 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+alice_post:
+  user: alice
   user_id: 1
   title: MyString
   image_id: 1
@@ -10,13 +11,13 @@ one:
   latitude: 1.5
   longitude: 1.5
 
-# two:
-#   user_id: 1
-#   favorite_id: 1
-#   post_comment_id: 1
-#   title: MyString
-#   body: MyText
-#   address: MyString
-#   access: MyText
-#   latitude: 1.5
-#   longitude: 1.5
+bob_post:
+  user: bob
+  user_id: 2
+  title: MyString
+  image_id: 1
+  body: MyText
+  address: MyString
+  access: MyText
+  latitude: 1.5
+  longitude: 1.5
